@@ -1,28 +1,26 @@
 group 'com.jimu'
 version '1.0-SNAPSHOT'
 
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'spring-boot'
+apply plugin: 'scala'
 
 buildscript {
-    ext {
-        springBootVersion = '1.3.4.RELEASE'
-    }
     repositories {
         // NOTE: You should declare only repositories that you need here
         mavenLocal()
         maven { url 'http://192.168.3.100:8080/nexus/content/groups/public/' }
         mavenCentral()
         maven { url "http://repo.spring.io/release" }
-        maven { url "http://repo.spring.io/milestone" }
-        maven { url "http://repo.spring.io/snapshot" }
+        maven { url "http://repo.typesafe.com/typesafe/releases/" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.4.RELEASE")
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'spring-boot'
+
 
 
 
@@ -32,10 +30,10 @@ repositories {
     mavenLocal()
     maven { url 'http://192.168.3.100:8080/nexus/content/groups/public/' }
     maven { url "http://repo.spring.io/release" }
-    maven { url "http://repo.spring.io/milestone" }
-    maven { url "http://repo.spring.io/snapshot" }
-    maven { url "http://maven.oschina.net/content/groups/public/" }
+    maven { url "http://repo.typesafe.com/typesafe/releases/" }
     maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "http://maven.oschina.net/content/groups/public/" }
+
 }
 
 dependencies {
@@ -43,7 +41,28 @@ dependencies {
     compile('org.springframework.boot:spring-boot-devtools')
     compile('org.springframework.boot:spring-boot-starter-validation')
     compile('org.asynchttpclient:async-http-client:2.0.2')
+    compile("org.scala-lang:scala-library:2.11.7")
+    compile("org.scala-lang:scala-reflect:2.11.7")
+    compile("org.scala-lang:scala-compiler:2.11.7")
+    compile('com.typesafe.akka:akka-actor_2.11:2.4.4')
+    compile('net.ruippeixotog:scala-scraper_2.11:1.0.0')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+tasks.withType(ScalaCompile) {
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
+    scalaCompileOptions.with {
+        force = true
+        additionalParameters =  ["-feature", "-language:implicitConversions", "-language:reflectiveCalls"]
+        useAnt = false
+    }
+}
+
+//tasks.withType(ScalaCompile) {
+//    scalaCompileOptions.additionalParameters = ["-feature", "-language:implicitConversions", "-language:reflectiveCalls"]
+//    scalaCompileOptions.useAnt = false
+//}
